Fix max-width for .img-wrap class

--- a/style.css
+++ b/style.css
@@ -144,8 +144,7 @@ html, body {
 
 .img-wrap {
   position: relative;
-  max-width: 7
-    0%;
+  max-width: 70%;
 }
 
 .img-wrap img {
